--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -97,6 +97,18 @@ blockquote {
   }
 }
 
+.about-image {
+	overflow: hidden;
+  -moz-box-shadow: 0 0 10px #ccc;
+  -webkit-box-shadow: 0 0 10px #ccc;
+  box-shadow: 0 0 10px #ccc;	
+  margin-bottom: 40px;
+	img {
+		width: 100%;
+		display: block;
+	}
+}
+
 @media (min-width: 576px) {
   .profile {
     width: 30%;
