--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -7,8 +7,8 @@
   --global-code-bg-color: #{$code-bg-color-light};
   --global-text-color: #{$black-color};
   --global-text-color-light: #{$grey-color};
-  --global-theme-color: #{$purple-color};
-  --global-hover-color: #{$purple-color};
+  --global-theme-color: #{$pastel-pink};
+  --global-hover-color: #{$pastel-pink};
   --global-footer-bg-color: #{$grey-color-dark};
   --global-footer-text-color: #{$grey-color-light};
   --global-footer-link-color: #{$white-color};
@@ -17,6 +17,7 @@
   --global-card-bg-color: #{$white-color};
 
   .fa-sun {
+    color: #{$pastel-pink};
     display : none;
   }
   .fa-moon {
