--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -22,7 +22,8 @@ $light-purple-color:  lighten($purple-color, 25%);
 $pink-color:          #f92080 !default;
 $pink-color-light:    #ffdddd !default;
 $yellow-color:        #efcc00 !default;
-$pastel-pink:         #966fd6 !default;
+$pastel-pink:         #D198B7 !default;
+$dark-pastel-pink:         #9c7088 !default;
 
 $grey-color:          #828282 !default;
 $grey-color-light:    lighten($grey-color, 40%);
