--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -10,8 +10,8 @@
   --global-theme-color: #{$dark-pastel-pink};
   --global-hover-color: #{$pastel-pink};
   // icon colors
-  --global-icon-color: #{$pastel-pink};
-  --global-icon-hover: #{$black-color};
+  --global-icon-color: #{$black-color};
+  --global-icon-hover: #{$pastel-pink};
   --global-footer-bg-color: #{$grey-color-dark};
   --global-footer-text-color: #{$grey-color-light};
   --global-footer-link-color: #{$white-color};
