--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -34,8 +34,8 @@ html[data-theme='dark'] {
   --global-code-bg-color: #{$code-bg-color-dark};
   --global-text-color: #{$grey-color-light};
   --global-text-color-light: #{$grey-color-light};
-  --global-theme-color: #{$cyan-color};
-  --global-hover-color: #{$cyan-color};
+  --global-theme-color: #{$pastel-pink};
+  --global-hover-color: #{$pastel-pink};
   --global-footer-bg-color: #{$grey-color-light};
   --global-footer-text-color: #{$grey-color-dark};
   --global-footer-link-color: #{$black-color};
@@ -43,7 +43,7 @@ html[data-theme='dark'] {
   --global-divider-color: #424246;
   --global-card-bg-color: #{$grey-900};
     // icon colors
-    --global-icon-color: #{$cyan-color};
+    --global-icon-color: #{$pastel-pink};
     --global-icon-hover: #{$grey-color-light};
 
   .fa-sun {
