--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -27,13 +27,14 @@ $dark-pastel-pink:    #9c7088 !default;
 
 $grey-color:          #828282 !default;
 // $grey-color-light:    lighten($grey-color, 40%);
-$grey-color-light:    #ccc !default;
+$grey-color-light:    #e8e8e8 !default;
 $grey-color-dark:     #1C1C1D;
 $grey-900:            #212529;
 
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
 
+$max-content-width:   800px !default;
 
 // Theme colors
 
