--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -14,12 +14,12 @@ hr {
 
 a, table.table a {
   color: var(--global-theme-color);
+  text-decoration: none;
+  transition: color 0.15s ease;
   &:hover {
     color: var(--global-theme-color);
-    text-decoration: underline;
-  }
-  &:hover:after :not(.nav-item.dropdown) {
-    width: 100%;
+    text-decoration: none;
+    border-bottom: 1px solid var(--global-theme-color);
   }
 }
 
@@ -28,11 +28,13 @@ figure, img {
 }
 
 blockquote {
-  background: var(--global-bg-color);
-  border-left: 2px solid var(--global-theme-color);
+  background: var(--global-code-bg-color);
+  border-left: 5px solid var(--global-theme-color);
   margin: 1.5em 10px;
-  padding: 0.5em 10px;
-  font-size: 1.2rem;
+  padding: 1em 1.5em;
+  font-size: 1.1rem;
+  color: var(--global-text-color);
+  font-style: italic;
 }
 
 // Math
@@ -55,9 +57,20 @@ blockquote {
 
 .card {
   background-color: var(--global-card-bg-color);
+  border: none;
+  box-shadow: 0 4px 6px var(--global-shadow-color);
+  transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+  border-radius: 10px;
+
+  &:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 15px var(--global-shadow-color);
+  }
   
   img {
     width: 100%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
   }
 
   .card-title {
@@ -80,44 +93,6 @@ blockquote {
   color: var(--global-theme-color);
 }
 
-// Profile
-
-.profile {
-  margin-left: 1rem;
-  width: 100%;
-
-  .address {
-    margin-bottom: 5px;
-    margin-top: 5px;
-    font-family: monospace;
-    p {
-      display: inline-block;
-      margin: 0;
-    }
-  }
-}
-
-.about-image {
-	overflow: hidden;
-  -moz-box-shadow: 0 0 10px var(--global-shadow-color);
-  -webkit-box-shadow: 0 0 10px var(--global-shadow-color);
-  box-shadow: 0 0 10px var(--global-shadow-color);
-  margin-bottom: 40px;
-	img {
-		width: 100%;
-		display: block;
-	}
-}
-
-@media (min-width: 576px) {
-  .profile {
-    width: 30%;
-    .address {
-      p { display: block; }
-    }
-  }
-}
-
 .post-description {
   margin-bottom: 2rem;
   font-size: 0.875rem;
@@ -134,10 +109,11 @@ blockquote {
 // Navbar customization
 
 .navbar {
-  box-shadow: none;
-  border-bottom: 1px solid var(--global-divider-color);
+  box-shadow: 0 2px 4px var(--global-shadow-color);
+  border-bottom: none;
   background-color: var(--global-bg-color);
   opacity: 0.95;
+  backdrop-filter: blur(10px);
 }
 .navbar .dropdown-menu {
   background-color: var(--global-bg-color);
@@ -241,10 +217,17 @@ blockquote {
 .news table td {
   font-size: 1rem;
   color: var(--global-text-color);
+  padding: 1.5rem 0.5rem;
+  border-bottom: 1px solid var(--global-divider-color);
 }
 
 .news table th {
   color: var(--global-text-color);
+  border-bottom: 2px solid var(--global-divider-color);
+}
+
+.news table tr:hover {
+  background-color: var(--global-hover-color);
 }
 
 // Social (bottom)
@@ -277,8 +260,8 @@ footer.fixed-bottom {
   font-size: 0.75rem;
   .container {
     color: var(--global-footer-text-color);
-    padding-top: 9px;
-    padding-bottom: 8px;
+    padding-top: 15px;
+    padding-bottom: 15px;
   }
   a {
     color: var(--global-footer-link-color);
@@ -367,173 +350,6 @@ footer.sticky-bottom {
   }
 }
 
-
-// Projects
-
-.projects {
-  a {
-    text-decoration: none;
-
-    &:hover {
-      .card-title {
-        color: var(--global-theme-color);
-      }
-    }
-  }
-
-  .card {
-    img {
-      width: 100%;
-    }
-  }
-
-  .card-item {
-    width: auto;
-    margin-bottom: 10px;
-
-    .row {
-      display: flex;
-      align-items: center;
-    }
-  }
-
-  .grid-sizer, .grid-item {
-    width: 250px;
-    margin-bottom: 10px;
-  }
-
-  h2.category {
-    color: var(--global-divider-color);
-    border-bottom: 1px solid var(--global-divider-color);
-    padding-top: 0.5rem;
-    margin-top: 2rem;
-    margin-bottom: 1rem;
-    text-align: right;
-  }
-}
-
-
-// Publications
-
-.publications {
-  margin-top: 2rem;
-  h1 {
-    color: var(--global-theme-color);
-    font-size: 2rem;
-    text-align: center;
-    margin-top: 1em;
-    margin-bottom: 1em;
-  }
-  h2 {
-    margin-bottom: 1rem;
-    span {
-      font-size: 1.5rem;
-    }
-  }
-  h2.year {
-    color: var(--global-divider-color);
-    border-top: 1px solid var(--global-divider-color);
-    padding-top: 1rem;
-    margin-top: 2rem;
-    margin-bottom: -2rem;
-    text-align: right;
-  }
-  ol.bibliography {
-    list-style: none;
-    padding: 0;
-    margin-top: 0;
-
-    li {
-      margin-bottom: 1rem;
-      .abbr {
-        height: 2rem;
-        margin-bottom: 0.5rem;
-        abbr {
-          display: inline-block;
-          background-color: var(--global-theme-color);
-          padding-left: 1rem;
-          padding-right: 1rem;
-          a {
-            color: white;
-            &:hover {
-              text-decoration: none;
-            }
-          }
-        }
-        .award {
-          color: var(--global-theme-color) !important;
-          border: 1px solid var(--global-theme-color);
-        }
-      }
-      .title {
-        font-weight: bolder;
-      }
-      .author {
-        a {
-          border-bottom: 1px dashed var(--global-theme-color);
-          &:hover {
-              border-bottom-style: solid;
-              text-decoration: none;
-          }
-        }
-        > em {
-          border-bottom: 1px solid;
-          font-style: normal;
-        }
-      }
-      .links {
-        a.btn {
-          color: var(--global-text-color);
-          border: 1px solid var(--global-text-color);
-          padding-left: 1rem;
-          padding-right: 1rem;
-          padding-top: 0.25rem;
-          padding-bottom: 0.25rem;
-          &:hover {
-            color: var(--global-theme-color);
-            border-color: var(--global-theme-color);
-          }
-        }
-      }
-      .hidden {
-        font-size: 0.875rem;
-        max-height: 0px;
-        overflow: hidden;
-        text-align: justify;
-        transition-property: 0.15s ease;
-        -moz-transition: 0.15s ease;
-        -ms-transition: 0.15s ease;
-        -o-transition: 0.15s ease;
-        transition: all 0.15s ease;
-
-        p {
-          line-height: 1.4em;
-          margin: 10px;
-        }
-        pre {
-          font-size: 1em;
-          line-height: 1.4em;
-          padding: 10px;
-        }
-      }
-      .hidden.open {
-        max-height: 100em;
-        transition-property: 0.15s ease;
-        -moz-transition: 0.15s ease;
-        -ms-transition: 0.15s ease;
-        -o-transition: 0.15s ease;
-        transition: all 0.15s ease;
-      }
-      div.abstract.hidden {
-        border: dashed 1px var(--global-bg-color);
-      }
-      div.abstract.hidden.open {
-        border-color: var(--global-text-color);
-      }
-    }
-  }
-}
-
 // Rouge Color Customization
 figure.highlight {
   margin: 0 0 1rem;
@@ -606,4 +422,3 @@ html.transition *:after {
   font-size: 0.875rem;
   padding-top: 0.25rem;
 }
-
