--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -16,9 +16,9 @@
   --global-footer-text-color: #{$grey-color-light};
   --global-footer-link-color: #{$white-color};
   --global-distill-app-color: #{$grey-color};
-  --global-divider-color: rgba(0,0,0,.1);
+  --global-divider-color: #{$grey-color-light};
   --global-card-bg-color: #{$white-color};
-  --global-shadow-color: #{$grey-color-light};
+  --global-shadow-color: rgba(0, 0, 0, 0.1);
 
   .fa-sun {
     display : none;
@@ -46,7 +46,7 @@ html[data-theme='dark'] {
     // icon colors
     --global-icon-color: #{$pastel-pink};
     --global-icon-hover: #{$grey-color-light};
-    --global-shadow-color: #{$black-color};
+    --global-shadow-color: rgba(0, 0, 0, 0.3);
 
   .fa-sun {
     padding-left: 10px;
